<resources>
    <string name="app_name">MachineTask</string>
    <string name="_rupees">₹</string>
    <string name="pledge">Pledge</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ends_in">ends in</string>
    <string name="goals">goals</string>
    <string name="funded">funded</string>
    <string name="_36">36</string>
</resources>