<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="Record"
            type="com.nimapinfotech.machinetask.model.Record" />

    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_700">

        <RelativeLayout
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mainImageURL="@{Record}">

            <ImageView
                android:id="@+id/imageview"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="fitXY" />

            <ImageView
                android:id="@+id/loadericon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:background="@null"
                android:elevation="2dp"
                android:src="@drawable/loader" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardView"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp">

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:weightSum="4">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_rupees"
                        android:textSize="22sp"
                        android:layout_marginRight="5dp"
                        android:id="@+id/rupee"
                        android:textColor="@color/white"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_centerInParent="true"
                        android:layout_toRightOf="@id/rupee"
                        android:text="@{Record.collectedValue.toString()}"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_rupees"
                        android:textSize="22sp"
                        android:layout_marginRight="5dp"
                        android:id="@+id/rupees"
                        android:textColor="@color/white"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_centerInParent="true"
                        android:layout_toRightOf="@id/rupees"
                        android:text="@{Record.totalValue.toString()}"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                </RelativeLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_36"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear"
                android:layout_margin="8dp"
                android:weightSum="4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/funded"
                    android:textAllCaps="true"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/goals"
                    android:textAllCaps="true"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ends_in"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    />
            </LinearLayout>

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/linear"
                android:layout_marginRight="8dp"
                android:layout_marginTop="-15dp"
                android:background="@drawable/textview_bg"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/pledge"
                android:textAllCaps="true"
                android:textColor="@color/teal_700"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentRight="true"
            android:layout_below="@id/image"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:layout_marginTop="-30dp"
            android:background="@drawable/circle"
            android:gravity="center"
            android:text="100%"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="-30dp"
            android:layout_toLeftOf="@id/textView"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/fav_imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/ic_wish_list" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textStyle="bold"
                    android:text="@{Record.title}"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/fav_imageView"
                    android:layout_margin="5dp"
                    android:textColor="@color/black"
                    android:text="@{Record.shortDescription}" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</layout>